--- a/client/src/app/layout/index.css
+++ b/client/src/app/layout/index.css
@@ -9,3 +9,9 @@ body {
 .nav {
   background-image: linear-gradient(135deg, rgb(24,42,115) 0%, rgb(33,138,174) 69%, rgb(32,167,172) 89%);
 }
+
+.react-calendar{
+  width: 100%;
+  border:none;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
